# otl-web

./: .gitignore  docker-compose-build-release.yml  docker-compose-prod.yml  docker-compose-renew-cert.yml  docker-compose.yml
backend/: Cargo.toml  Cross.toml  Dockerfile  Dockerfile-prod  Makefile  dev.Dockerfile  prod.Dockerfile  shell.nix
backend/api/: Cargo.toml
backend/api/src/: blogpost_handler.rs  errors.rs  event_handler.rs  lib.rs  tour_handler.rs
backend/application/: Cargo.toml
backend/application/src/: errors.rs  lib.rs
backend/application/src/auth/: apikey_guard.rs  mod.rs
backend/application/src/blogpost/: read.rs
backend/application/src/event/: create.rs  mod.rs  read.rs  save.rs
backend/application/src/tour/: create.rs  read.rs
backend/domain/: Cargo.toml
backend/domain/src/: lib.rs  models.rs  schema.rs  structs.rs
backend/infrastructure/: Cargo.toml
backend/infrastructure/migrations/00000000000001_create_posts/: up.sql
backend/infrastructure/migrations/00000000000002_create_tours/: down.sql  up.sql
backend/shared/: Cargo.toml
backend/shared/src/: response_models.rs
frontend/: README.md  dev.Dockerfile  package-lock.json  package.json  prod.Dockerfile  tailwind.config.js  vite.config.js
frontend/src/: main.js
frontend/src/lib/: Container.svelte  CoverImage.svelte  EventCard.svelte  EventCarousel.svelte  Footer.svelte  LandingImage.svelte  NavBar.svelte  PersonalCard.svelte  TourResultsTable.svelte
frontend/src/routes/: +error.svelte  +layout.svelte  +page.js  +page.svelte
nginx/: Dockerfile  nginx.conf
(+19 files in other folders)
