[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
application = { path = "../application" }
domain = { path = "../domain" }
shared = { path = "../shared" }

rocket = { version = "0.5.1", features = ["json"] }
serde_json = "1.0.120"
chrono = "0.4.38"
serde = "1.0.208"
uuid = "1.10.0"
